--- a/pages/nightcity-style.css
+++ b/pages/nightcity-style.css
@@ -26,7 +26,6 @@ body {
     align-items: center;
     padding: 20px 40px;
     background-color: var(--main-bg-color);
-    border-bottom: 2px solid var(--highlight-color);
 }
 
 .nc-header-left, .nc-header-right {
@@ -82,31 +81,23 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 0px 40px;
-    padding-bottom: 20px;
-    border-bottom: 2px solid var(--highlight-color);
 }
 
-.nc-body-bookmark {
+.nc-bookmark {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 20px;
+    border-top: 2px solid var(--highlight-color);;
 }
 
-.nc-body-intro {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0px 40px;
-}
-
-.nc-body-head {
+.nc-bookmark-label {
     background-color: var(--highlight-color);
     color: var(--main-bg-color);
     padding: 5px 15px;
     display: inline-block;
     font-weight: bold;
     text-transform: uppercase;
-    margin-bottom: 20px;
 }
 
 .nc-body-head-title {
