--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Zastąp czcionką podobną do tej z obrazka */
+    padding: 0;
+    font-family: 'Arial', sans-serif; 
     background-color: #0d0d0d; /* Bardzo ciemne tło */
     color: #00ff00; /* Neonowy zielony kolor tekstu, jak na obrazku */
     display: flex;
