--- a/pages/arasaka-style.css
+++ b/pages/arasaka-style.css
@@ -98,6 +98,15 @@ body {
     background-color: var(--highlight-color);
 }
 
+.ar-section-header h3 {
+    font-size: 24px;
+    font-weight: bold;
+    color: var(--highlight-color); 
+    padding-left: 20px;
+    position: relative;
+    text-transform: uppercase;
+}
+
 .ar-section-header p {
     font-size: 16px;
     line-height: 1.6;
